Minor form fix on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -229,7 +229,11 @@ form {
 		}
 	}
 
-
+	input[type="email"] {
+		@media (max-width: 460px) {
+			margin-bottom: 8px;
+		}
+	}	
 
 }
 
